# azure-ai-it-copilot

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.optimized  GITHUB_SETUP.md  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  README.md  SECURITY.md  alembic.ini  benchmark_startup.py  cli.py  coverage.xml  docker-compose.yml  logging_config.py  main.py  main_ultra.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test-and-coverage.yml
ai/: ab_testing.py  failure_fallbacks.py
ai-orchestrator/: orchestrator.py
ai_orchestrator/: __init__.py  orchestrator.py
ai_orchestrator/agents/: __init__.py  compliance_agent.py  cost_agent.py  incident_agent.py  infrastructure_agent.py  predictive_agent.py  resource_agent.py
api/: __init__.py  server.py
auth/: __init__.py  azure_ad.py
automation_engine/: backup_recovery.py  celery_app.py
automation_engine/powershell/: Invoke-ComplianceCheck.ps1  Invoke-IncidentResponse.ps1  Invoke-MonitoringSetup.ps1  Invoke-ResourceManagement.ps1
automation_engine/python/: azure_automation.py
automation_engine/tasks/: __init__.py  analytics.py  maintenance.py  monitoring.py  notifications.py  remediation.py
azure_clients/: __init__.py  cosmos_client.py  cosmos_client_simple.py  resource_client.py  resource_client_simple.py
config/: __init__.py  hot_reload.py  optimized_settings.py  secrets.py  settings.py  validator.py
core/: __init__.py  advanced_caching.py  application.py  async_optimizations.py  async_utils.py  audit_logger.py  base_classes.py  database_optimization.py  dependency_injection.py  error_handling.py  exceptions.py  fast_imports.py  health_monitoring.py  interfaces.py  memory_optimization.py  memory_optimizer.py  observability.py  performance.py  plugin_manager.py  rate_limiter.py  ultra_cache.py
dashboard/: .dockerignore  Dockerfile  nginx.conf  package.json
dashboard/public/: index.html  manifest.json
dashboard/src/: App.js  index.css
dashboard/src/components/: Layout.js
dashboard/src/context/: AuthContext.js  WebSocketContext.js
dashboard/src/pages/: CommandCenter.js  Compliance.js  CostAnalysis.js  Dashboard.js  Incidents.js  Login.js  Predictions.js  Resources.js  Settings.js
dashboard/src/services/: api.js
database/: __init__.py  connection.py  models.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_VERIFICATION.md  OPTIMIZATION_TRACKING.md  QUICK_START.md  README.md  SAAS_TRANSFORMATION_PLAN.md  TESTING.md  USE_CASES.md  VERIFICATION.md
infrastructure/terraform/: main.tf  variables.tf
integrations/: __init__.py  azure_sentinel.py  microsoft_graph.py  slack.py  teams.py
k8s/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
migrations/: env.py
ml/: model_validator.py
ml_models/: __init__.py  anomaly_detector.py
monitoring/: advanced_monitoring.py  prometheus.yml
monitoring/grafana/dashboards/: dashboard.json
monitoring/grafana/datasources/: prometheus.yaml
nginx/: nginx.conf
scripts/: cleanup_optimizer.py  deploy-minimal-cost.sh  deploy-to-digitalocean.sh  deploy.sh  deploy_azure.py  dev.sh  generate_coverage_report.py  health-check.sh  run_tests.sh  setup-saas-components.sh  setup-stripe-products.js  start.sh
security/: penetration_testing.py
services/: __init__.py  azure_client_factory.py  cache_service.py  event_bus_service.py  health_service.py  metrics_service.py  notification_service.py  secrets_service.py  task_queue_service.py
tests/: README.md  conftest.py  test_api.py  test_orchestrator.py  test_requirements.txt
tests/api/: test_endpoints.py
tests/database/: test_database_framework.py
tests/fixtures/: test_fixtures.py
tests/integration/: test_azure_services.py
tests/load/: test_ai_orchestrator_load.py
tests/performance/: test_benchmarks.py
tests/unit/: test_async_optimizations.py  test_memory_optimization.py  test_orchestrator_unit.py
